--- a/_assets/sass/_styles.scss
+++ b/_assets/sass/_styles.scss
@@ -47,7 +47,7 @@
    }
 
    .bv-mob-left {
-     text-align: center;
+     text-align: justify;
    }
 
    @media only screen and (max-width: 768px) {
@@ -90,62 +90,6 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-    &--left   {
-      background-attachment: fixed;
-      background-position: 32% 50%;
-      background-repeat: no-repeat;
-      background-size: cover;}
-
-
-    &--right   {
-      background-attachment: fixed;
-      background-position: 60% 50%;
-      background-repeat: no-repeat;
-      background-size: cover;}
-
-    &--darkest   {
-      background-attachment: fixed;
-      background-color: rgba(5,20,40,0.9);
-      background-blend-mode: multiply;
-      background-position: center;
-      background-size: cover;}
-
-    &--darker   {
-      background-attachment: fixed;
-      background-color: rgba(5,20,40,0.8);
-      background-blend-mode: multiply;
-      background-position: center;
-      background-size: cover;}
-
-    &--dark   {
-      background-attachment: fixed;
-      background-color: rgba(5,20,40,0.7);
-      background-blend-mode: multiply;
-      background-position: center;
-      background-size: cover;}
-
-    &--lighter   {
-      background-attachment: fixed;
-      background-color: rgba(250,250,250,0.7);
-      background-blend-mode: lighten;
-      background-position: center;
-      background-size: cover;
-      }
-
-    &--light   {
-      background-attachment: fixed;
-      background-color: rgba(250,250,250,0.5);
-      background-blend-mode: color;
-      background-position: center;
-      background-size: cover; }
-
-    &--white   {
-      background-attachment: fixed;
-      background-color: rgba(250,250,250,0.8);
-      background-blend-mode: overlay;
-      background-position: center;
-      background-size: cover; }
-
 }
 
 
@@ -163,52 +107,6 @@
 .bv-parallax{
       background-attachment: scroll;
       background-size: cover;
-
-      &--left   {
-        background-attachment: scroll;
-        background-position: 32% 50%;
-        background-repeat: no-repeat;
-        background-size: cover;}
-
-
-      &--right   {
-        background-attachment: scroll;
-        background-position: 60% 50%;
-        background-repeat: no-repeat;
-        background-size: cover;}
-
-
-
-    &--darkest   {
-      background-attachment: scroll;
-      background-size: cover;
-    }
-      &--darker   {
-        background-attachment: scroll;
-        background-size: cover;
-      }
-      &--dark   {
-        background-attachment: scroll;
-        background-size: cover;
-        }
-
-      &--lighter   {
-        background-attachment: scroll;
-        background-size: cover;
-        background-color: none;
-
-      }
-      &--light   {
-        background-attachment: scroll;
-        background-size: cover;
-        background-color: none;
-     }
-     &--white   {
-       background-attachment: scroll;
-       background-size: cover;
-       background-color: none;
-    }
-
     }
 
 }
