--- a/_assets/sass/_styles.scss
+++ b/_assets/sass/_styles.scss
@@ -125,10 +125,11 @@
   top: $s-2;
   left: $s-2;
   display: block;
-  width: 50%;
+  //width: 50%;
   @include bp($sm){
     top: $s0;
     left: $s0;
-    width: 146px;
+    height: 35px;
+    width: auto;
   }
 }
