--- a/_includes/offer/offer.html
+++ b/_includes/offer/offer.html
@@ -4,10 +4,9 @@
   <a class="offer__link" href="{{offer.link}}" target="_blank"><span class="btn btn--white">Zum Angebot</span></a>
 
   <div class="bg-img bg-img--3-2" style="background-image: url('{{offer.image}}')">
-    {% if offer.flight-tag %}
-      <img class="flight-tag" src="{{site.img}}/icons/flights-incl.png" alt="FLÜGE INKLUSIVE">
+    {% if offer.tag  %}
+      <img class="flight-tag" src="{{site.img}}/icons/tag-{{offer.tag}}.png">
     {% endif %}
-
   </div>
 
   <div class="offer__content text--left">
@@ -31,7 +30,9 @@
         <div class="offer__details">
           <div>Ab <span class="offer__price">{{offer.price}}€</span></div>
           <div class="text--sm">{{offer.price-description}}</div>
-          <div class="js-offer-expires text--sm" data-expires="{{offer.expires}}"></div>
+          {% if offer.expires  %}
+            <div style="display: none;" class="js-offer-expires text--sm" data-expires="{{offer.expires}}"></div>
+          {% endif %}
         </div>
 
       </div>
